--- a/app/index.pug
+++ b/app/index.pug
@@ -71,7 +71,8 @@ html(lang="en")
                     .cart-description
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
+                    .cart-link
+                      a(href="#").pl-2.py-1 Continue Reading »
                 .col-md-12.col-lg-6
                   article.cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
@@ -80,7 +81,8 @@ html(lang="en")
                     .cart-description
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
+                    .cart-link
+                      a(href="#").pl-2.py-1 Continue Reading »
                 .col-md-12.col-lg-6
                   article.cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
@@ -89,7 +91,8 @@ html(lang="en")
                     .cart-description
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
+                    .cart-link
+                      a(href="#").pl-2.py-1 Continue Reading »
                 .col-md-12.col-lg-6
                   article.cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
@@ -98,7 +101,8 @@ html(lang="en")
                     .cart-description
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
+                    .cart-link
+                      a(href="#").pl-2.py-1 Continue Reading »
           //- Right sidebar
           .col-md-5.col-lg-4
             aside.mb-4.pb-1
@@ -117,8 +121,8 @@ html(lang="en")
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
-                            .link-block.ml-auto
-                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
+                            .cart-link.ml-auto
+                              a(href="#").pl-2.py-1 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -132,8 +136,8 @@ html(lang="en")
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
-                            .link-block.ml-auto
-                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
+                            .cart-link.ml-auto
+                              a(href="#").pl-2.py-1 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -147,8 +151,8 @@ html(lang="en")
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
-                            .link-block.ml-auto
-                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
+                            .cart-link.ml-auto
+                              a(href="#").pl-2.py-1 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -162,8 +166,8 @@ html(lang="en")
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
-                            .link-block.ml-auto
-                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
+                            .cart-link.ml-auto
+                              a(href="#").pl-2.py-1 Continue Reading »
                     .row
                       .col-12
                         .divider
