new refactoring link-block in widget-news

--- a/app/index.pug
+++ b/app/index.pug
@@ -72,7 +72,7 @@ html(lang="en")
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     .cart-link
-                      a(href="#").pl-2.py-1 Continue Reading »
+                      a(href="#").pl-2 Continue Reading »
                 .col-md-12.col-lg-6
                   article.cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
@@ -82,7 +82,7 @@ html(lang="en")
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     .cart-link
-                      a(href="#").pl-2.py-1 Continue Reading »
+                      a(href="#").pl-2 Continue Reading »
                 .col-md-12.col-lg-6
                   article.cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
@@ -92,7 +92,7 @@ html(lang="en")
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     .cart-link
-                      a(href="#").pl-2.py-1 Continue Reading »
+                      a(href="#").pl-2 Continue Reading »
                 .col-md-12.col-lg-6
                   article.cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
@@ -102,7 +102,7 @@ html(lang="en")
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     .cart-link
-                      a(href="#").pl-2.py-1 Continue Reading »
+                      a(href="#").pl-2 Continue Reading »
           //- Right sidebar
           .col-md-5.col-lg-4
             aside.mb-4.pb-1
@@ -122,7 +122,7 @@ html(lang="en")
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .cart-link.ml-auto
-                              a(href="#").pl-2.py-1 Continue Reading »
+                              a(href="#").pl-2 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -137,7 +137,7 @@ html(lang="en")
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .cart-link.ml-auto
-                              a(href="#").pl-2.py-1 Continue Reading »
+                              a(href="#").pl-2 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -152,7 +152,7 @@ html(lang="en")
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .cart-link.ml-auto
-                              a(href="#").pl-2.py-1 Continue Reading »
+                              a(href="#").pl-2 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -167,7 +167,7 @@ html(lang="en")
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
                             .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .cart-link.ml-auto
-                              a(href="#").pl-2.py-1 Continue Reading »
+                              a(href="#").pl-2 Continue Reading »
                     .row
                       .col-12
                         .divider
