--- a/app/css/style.css
+++ b/app/css/style.css
@@ -117,8 +117,6 @@ button.btn{
   font-size: 20px;
   line-height: 20px;
   color: #666666;
-  height: 22px; /*обрезка текста*/
-  overflow: hidden; /*обрезка текста*/
 }
 .content .cart{
   max-width: 300px;
@@ -127,20 +125,20 @@ button.btn{
   font-size: 12px;
   line-height: 14px;
   color: #666666;
-  margin-bottom: 24px;
-  height: 114px; /*обрезка текста*/
-  overflow: hidden; /*обрезка текста*/
+  margin-bottom: 37px;
 }
 .content .cart-link {
-  max-width: 160px;
+  width: 160px;
   height: 25px;
-  
   background-color: #3a6988;
 }
 .content .cart-link a{
   font-size: 13px;
   line-height: 13px;
   color: #ffffff;
+}
+aside .cart-link{
+  margin-top: 4px;
 }
 aside .widget-wrapper{
   max-width: 360px;
@@ -152,8 +150,6 @@ aside .widget-news h2.content-title, aside .widget-news .cart-description{
   color: #050521;
 }
 aside .widget-news .cart-description{
-  height: 47px; /*обрезка текста*/
-  overflow: hidden; /*обрезка текста*/
   line-height: 14px;
   color: #666666;
 }
