--- a/app/index.pug
+++ b/app/index.pug
@@ -48,19 +48,19 @@ html(lang="en")
     .wrapper-slider
       .slider.slider-for.mx-auto.mb-3
         div
-          img(data-lazy="img/960of270px.png", alt="").img-fluid
+          img(src="#" data-lazy="img/960of270px.png", alt="").img-fluid
           div
             .slider-link Cursus penati saccum ut curabitur nulla.
         div
-          img(data-lazy="img/960of270green.png", alt="").img-fluid
+          img(src="#" data-lazy="img/960of270green.png", alt="").img-fluid
           div
             .slider-link Cursus penati saccum ut curabitur nulla.
         div
-          img(data-lazy="img/960of270red.png", alt="").img-fluid
+          img(src="#" data-lazy="img/960of270red.png", alt="").img-fluid
           div
             .slider-link Cursus penati saccum ut curabitur nulla.
         div
-          img(data-lazy="img/960of270yellow.png", alt="").img-fluid
+          img(src="#" data-lazy="img/960of270yellow.png", alt="").img-fluid
           div
             .slider-link Cursus penati saccum ut curabitur nulla.
       .slider.slider-nav.mx-auto
