--- a/app/index.pug
+++ b/app/index.pug
@@ -11,14 +11,13 @@ html(lang="en")
   body
     .container-xl
       header.header.mt-2.pt-sm-4
-        .spoiler-header.main-header
-          h1.header-title Universal College
-          .header-contact
-            .description Free PSD Website Template
-            address.mt-2.mb-0.mr-lg-4
-              .header-address.mb-sm-3 Libero | Maecenas | Mauris | Suspendisse<br>
-              a.header-contact(href="tel:+0000000000") Tel: xxxxx xxxxxxxxxx | 
-              a.header-contact(href="mailto:info@domain.com") Mail: info@domain.com
+        h1.header-title Universal College
+        .spoiler-header.header-wrapper.pb-1.pb-sm
+          .description Free PSD Website Template
+          address.mt-2.mb-0.mr-lg-4
+            .header-address.mb-sm-3 Libero | Maecenas | Mauris | Suspendisse<br>
+            a.header-contact(href="tel:+0000000000") Tel: xxxxx xxxxxxxxxx | 
+            a.header-contact(href="mailto:info@domain.com") Mail: info@domain.com
 
 
     .container-xl.container-pd-0
